server/src/main/java/com/example/scienceops/common/error/ForbiddenException.java
package com.example.scienceops.common.error;

public class ForbiddenException extends RuntimeException {

    public ForbiddenException(String message) {
        super(message);
    }
}
